--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,26 +1,15 @@
 {
-  "theme_color": "#222222",
-  "background_color": "#222222",
-  "display": "standalone",
-  "scope": "/",
+  "name": "Sasha-crm",
+  "short_name": "SashaCRM",
+  "description": "Sasha-crm is an intelligent, AI-powered Customer Relationship Management (CRM) platform designed to streamline sales, task management, and team collaboration.",
   "start_url": "/",
-  "name": "SashaLeads AI",
-  "short_name": "SashaLeads",
-  "description": "AI-Powered Lead Management and Analytics",
+  "display": "standalone",
+  "background_color": "#09090b",
+  "theme_color": "#3b82f6",
   "icons": [
     {
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
       "type": "image/png"
     },
     {
