--- a/package.json
+++ b/package.json
@@ -55,7 +55,10 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "genkit": "^1.3.0",
+    "@genkit-ai/google-genai": "^1.1.0",
+    "@genkit-ai/next": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
