--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,45 @@
 {
-  "name": "Sasha-crm",
-  "short_name": "SashaCRM",
-  "description": "Sasha-crm is an intelligent, AI-powered Customer Relationship Management (CRM) platform designed to streamline sales, task management, and team collaboration.",
+  "name": "SashaLeads AI",
+  "short_name": "SashaLeads",
+  "description": "An intelligent, AI-powered CRM designed to streamline sales, task management, and team collaboration.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#09090b",
-  "theme_color": "#3b82f6",
+  "background_color": "#0a0a0a",
+  "theme_color": "#2365de",
   "icons": [
+    {
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
     {
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
       "type": "image/png"
     },
     {
