--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,6 +1,14 @@
 # Settings to manage and configure a Firebase App Hosting backend.
-
 runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
   maxInstances: 1
+# Serve files with compression to improve performance.
+headers:
+- headers:
+  - key: Content-Encoding
+    value: gzip
+  source: "**/*.@(js|css|html|json)"
+# Use HTTP/2 for all connections.
+server:
+  protocol: "h2"
