--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "next": "15.3.8",
     "next-pwa": "^5.6.0",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
